--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://sheltered-gorge-06055.herokuapp.com/",
+  "proxy": "http://localhost:4000/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
